--- a/web/backend/rl-nestjs-mono/package.json
+++ b/web/backend/rl-nestjs-mono/package.json
@@ -17,8 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "husky"
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
@@ -71,7 +70,6 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.0.0",
-    "husky": "^9.1.4",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "prisma": "^5.18.0",
