--- a/web/frontend/rl-angular-spa/package.json
+++ b/web/frontend/rl-angular-spa/package.json
@@ -14,8 +14,7 @@
     "test": "ng test --browsers ChromeHeadless --watch=false",
     "lint": "eslint src --ext .ts --fix",
     "format": "prettier src --write",
-    "update-dependencies": "ncu -u",
-    "prepare": "husky"
+    "update-dependencies": "ncu -u"
   },
   "private": true,
   "dependencies": {
@@ -72,7 +71,6 @@
     "grunt-bump": "^0.8.0",
     "grunt-contrib-clean": "^2.0.1",
     "grunt-prompt": "^1.3.3",
-    "husky": "^9.0.11",
     "jasmine-core": "~5.1.2",
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
