--- a/web/frontend/rl-angular-spa/package.json
+++ b/web/frontend/rl-angular-spa/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@roomyledger-ui/roomyledger-ui-spa",
-  "version": "0.0.3",
+  "name": "rl-angular-spa",
+  "version": "0.0.1",
   "description": "Bill-splitting application",
   "repository": "git@github.com:jonathan-lee-devel/roomyledger.com.git",
   "author": "Jonathan Lee <jonathan.lee.devel@gmail.com>",
@@ -14,8 +14,7 @@
     "test": "ng test --browsers ChromeHeadless --watch=false",
     "lint": "eslint src --ext .ts --fix",
     "format": "prettier src --write",
-    "update-dependencies": "ncu -u",
-    "prepare": "husky"
+    "update-dependencies": "ncu -u"
   },
   "private": true,
   "dependencies": {
@@ -72,7 +71,6 @@
     "grunt-bump": "^0.8.0",
     "grunt-contrib-clean": "^2.0.1",
     "grunt-prompt": "^1.3.3",
-    "husky": "^9.0.11",
     "jasmine-core": "~5.1.2",
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
