--- a/.github/workflows/verify-node.yml
+++ b/.github/workflows/verify-node.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         node-version: [20.x]
-    name: Lint (v${{ matrix.node-version }})
+    name: Lint Backend (v${{ matrix.node-version }})
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -35,7 +35,7 @@ jobs:
     strategy:
       matrix:
         node-version: [20.x]
-    name: Build (v${{ matrix.node-version }})
+    name: Build Backend (v${{ matrix.node-version }})
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -56,7 +56,7 @@ jobs:
     strategy:
       matrix:
         node-version: [20.x]
-    name: Test (v${{ matrix.node-version }})
+    name: Test Backend (v${{ matrix.node-version }})
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -73,7 +73,7 @@ jobs:
         run: yarn run test
 
   sonarcloud-analysis-backend:
-    name: SonarCloud (v${{ matrix.node-version }})
+    name: SonarCloud Backend (v${{ matrix.node-version }})
     runs-on: ubuntu-22.04
     strategy:
       matrix:
@@ -115,7 +115,7 @@ jobs:
     strategy:
       matrix:
         node-version: [ 20.x ]
-    name: Lint (v${{ matrix.node-version }})
+    name: Lint Frontend (v${{ matrix.node-version }})
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -136,7 +136,7 @@ jobs:
     strategy:
       matrix:
         node-version: [ 20.x ]
-    name: Build (v${{ matrix.node-version }})
+    name: Build Frontend (v${{ matrix.node-version }})
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -160,7 +160,7 @@ jobs:
     strategy:
       matrix:
         node-version: [ 20.x ]
-    name: Test (v${{ matrix.node-version }})
+    name: Test Frontend (v${{ matrix.node-version }})
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -177,7 +177,7 @@ jobs:
         run: yarn run test
 
   sonarcloud-analysis-frontend:
-    name: SonarCloud (v${{ matrix.node-version }})
+    name: SonarCloud Frontend (v${{ matrix.node-version }})
     runs-on: ubuntu-22.04
     strategy:
       matrix:
