--- a/.github/workflows/verify-node.yml
+++ b/.github/workflows/verify-node.yml
@@ -99,7 +99,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          projectBaseDir: ${{ matrix.project }}
+          projectBaseDir: web/backend/rl-nestjs-mono
           args: -Dsonar.projectKey=jonathan-lee-devel_roomyledger-rl-nestjs-mono
             -Dsonar.organization=jonathan-lee-devel
             -Dsonar.sources=src
@@ -203,7 +203,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          projectBaseDir: ${{ matrix.project }}
+          projectBaseDir: web/frontend/rl-angular-spa
           args: -Dsonar.projectKey=jonathan-lee-devel_roomyledger-rl-angular-spa
             -Dsonar.organization=jonathan-lee-devel
             -Dsonar.sources=src
