Specify Railway service in deployment step
Updated the deployment script in the GitHub Actions workflow to specify the "rl-api-service" when running the "railway up" command. This ensures the correct service is targeted during the deployment process.

--- a/.github/workflows/verify-node.yml
+++ b/.github/workflows/verify-node.yml
@@ -229,7 +229,7 @@ jobs:
       - name: Install Railway
         run: npm i -g @railway/cli
       - name: Deploy
-        run: railway up
+        run: railway up --service rl-api-service
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_STAGING_TOKEN }}
 
