--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -9,12 +9,12 @@ permissions:
   pull-requests: read
 
 jobs:
-  lint:
+  lint-backend:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        node-version: [20.x]
-    name: Lint (v${{ matrix.node-version }})
+        node-version: [ 20.x ]
+    name: Lint Backend (v${{ matrix.node-version }})
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,16 +24,18 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
           cache-dependency-path: '**/yarn.lock'
-      - run: yarn install
+      - run: yarn install --frozen-lockfile
+        working-directory: ./web/backend/rl-nestjs-mono
       - name: Lint (v${{ matrix.node-version }})
+        working-directory: ./web/backend/rl-nestjs-mono
         run: yarn run lint
 
-  build:
+  build-backend:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        node-version: [20.x]
-    name: Build (v${{ matrix.node-version }})
+        node-version: [ 20.x ]
+    name: Build Backend (v${{ matrix.node-version }})
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -43,18 +45,18 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
           cache-dependency-path: '**/yarn.lock'
-      - run: yarn install
-      - name: Build Staging (v${{ matrix.node-version }})
-        run: yarn run build:stage
+      - run: yarn install --frozen-lockfile
+        working-directory: ./web/backend/rl-nestjs-mono
       - name: Build (v${{ matrix.node-version }})
+        working-directory: ./web/backend/rl-nestjs-mono
         run: yarn run build
 
-  test:
+  test-backend:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        node-version: [20.x]
-    name: Test (v${{ matrix.node-version }})
+        node-version: [ 20.x ]
+    name: Test Backend (v${{ matrix.node-version }})
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -64,16 +66,18 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
           cache-dependency-path: '**/yarn.lock'
-      - run: yarn install
+      - run: yarn install --frozen-lockfile
+        working-directory: ./web/backend/rl-nestjs-mono
       - name: Test (v${{ matrix.node-version }})
+        working-directory: ./web/backend/rl-nestjs-mono
         run: yarn run test
 
-  sonarcloud-analysis:
-    name: SonarCloud (v${{ matrix.node-version }})
+  sonarcloud-analysis-backend:
+    name: SonarCloud Backend (v${{ matrix.node-version }})
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [ 20.x ]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -84,8 +88,114 @@ jobs:
           cache: yarn
           cache-dependency-path: '**/yarn.lock'
       - name: Install Dependencies
-        run: yarn install
+        working-directory: ./web/backend/rl-nestjs-mono
+        run: yarn install --frozen-lockfile
       - name: Run Tests
+        working-directory: ./web/backend/rl-nestjs-mono
+        run: yarn run test:cov
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          projectBaseDir: web/backend/rl-nestjs-mono
+          args: -Dsonar.projectKey=jonathan-lee-devel_roomyledger-rl-nestjs-mono
+            -Dsonar.organization=jonathan-lee-devel
+            -Dsonar.sources=src
+            -Dsonar.tests=src
+            -Dsonar.inclusions=**
+            -Dsonar.exclusions=**/*.spec.ts,**.module.ts,src/main.ts
+            -Dsonar.test.inclusions=src/**/*.spec.ts
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+            -Dsonar.qualitygate.wait=true
+
+  lint-frontend:
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        node-version: [ 20.x ]
+    name: Lint Frontend (v${{ matrix.node-version }})
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: yarn
+          cache-dependency-path: '**/yarn.lock'
+      - run: yarn install --frozen-lockfile
+        working-directory: ./web/frontend/rl-angular-spa
+      - name: Lint (v${{ matrix.node-version }})
+        working-directory: ./web/frontend/rl-angular-spa
+        run: yarn run lint
+
+  build-frontend:
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        node-version: [ 20.x ]
+    name: Build Frontend (v${{ matrix.node-version }})
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: yarn
+          cache-dependency-path: '**/yarn.lock'
+      - run: yarn install --frozen-lockfile
+        working-directory: ./web/frontend/rl-angular-spa
+      - name: Build Staging (v${{ matrix.node-version }})
+        working-directory: ./web/frontend/rl-angular-spa
+        run: yarn run build:stage
+      - name: Build (v${{ matrix.node-version }})
+        working-directory: ./web/frontend/rl-angular-spa
+        run: yarn run build
+
+  test-frontend:
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        node-version: [ 20.x ]
+    name: Test Frontend (v${{ matrix.node-version }})
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: yarn
+          cache-dependency-path: '**/yarn.lock'
+      - run: yarn install --frozen-lockfile
+        working-directory: ./web/frontend/rl-angular-spa
+      - name: Test (v${{ matrix.node-version }})
+        working-directory: ./web/frontend/rl-angular-spa
+        run: yarn run test
+
+  sonarcloud-analysis-frontend:
+    name: SonarCloud Frontend (v${{ matrix.node-version }})
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        node-version: [ 20.x ]
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: yarn
+          cache-dependency-path: '**/yarn.lock'
+      - name: Install Dependencies
+        working-directory: ./web/frontend/rl-angular-spa
+        run: yarn install --frozen-lockfile
+      - name: Run Tests
+        working-directory: ./web/frontend/rl-angular-spa
         run: yarn run test
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
@@ -93,9 +203,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          projectBaseDir: ${{ matrix.project }}
-          args: -Dsonar.projectKey=jonathanlee-io_roomyledger.com-ui-angular-spa
-            -Dsonar.organization=jonathanlee-io
+          projectBaseDir: web/frontend/rl-angular-spa
+          args: -Dsonar.projectKey=jonathan-lee-devel_roomyledger-rl-angular-spa
+            -Dsonar.organization=jonathan-lee-devel
             -Dsonar.sources=src
             -Dsonar.tests=src
             -Dsonar.inclusions=**
@@ -104,8 +214,27 @@ jobs:
             -Dsonar.javascript.lcov.reportPaths=coverage/roomyledger-ui-spa/lcov.info
             -Dsonar.qualitygate.wait=true
 
+  deploy-railway-production:
+    needs: [ lint-backend, lint-frontend, build-backend, build-frontend, test-backend, test-frontend, sonarcloud-analysis-backend, sonarcloud-analysis-frontend ]
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Use Node 20
+        uses: actions/setup-node@v1
+        with:
+          node-version: 20.x
+      - name: Install packages
+        run: yarn install --frozen-lockfile
+      - name: Install Railway
+        run: npm i -g @railway/cli
+      - name: Deploy
+        run: railway up --service rl-ledger-service
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_PRODUCTION_TOKEN }}
+
   deploy-vercel-prod:
-    needs: [lint, build, test, sonarcloud-analysis]
+    needs: [ lint-backend, lint-frontend, build-backend, build-frontend, test-backend, test-frontend, sonarcloud-analysis-backend, sonarcloud-analysis-frontend ]
     runs-on: ubuntu-22.04
     env:
       VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
