--- a/.github/workflows/verify-node.yml
+++ b/.github/workflows/verify-node.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
           cache-dependency-path: '**/yarn.lock'
-      - run: yarn install
+      - run: yarn install --frozen-lockfile
         working-directory: ./web/backend/rl-nestjs-mono
       - name: Lint (v${{ matrix.node-version }})
         working-directory: ./web/backend/rl-nestjs-mono
@@ -45,7 +45,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
           cache-dependency-path: '**/yarn.lock'
-      - run: yarn install
+      - run: yarn install --frozen-lockfile
         working-directory: ./web/backend/rl-nestjs-mono
       - name: Build (v${{ matrix.node-version }})
         working-directory: ./web/backend/rl-nestjs-mono
@@ -66,7 +66,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
           cache-dependency-path: '**/yarn.lock'
-      - run: yarn install
+      - run: yarn install --frozen-lockfile
         working-directory: ./web/backend/rl-nestjs-mono
       - name: Test (v${{ matrix.node-version }})
         working-directory: ./web/backend/rl-nestjs-mono
@@ -89,7 +89,7 @@ jobs:
           cache-dependency-path: '**/yarn.lock'
       - name: Install Dependencies
         working-directory: ./web/backend/rl-nestjs-mono
-        run: yarn install
+        run: yarn install --frozen-lockfile
       - name: Run Tests
         working-directory: ./web/backend/rl-nestjs-mono
         run: yarn run test:cov
@@ -125,7 +125,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
           cache-dependency-path: '**/yarn.lock'
-      - run: yarn install
+      - run: yarn install --frozen-lockfile
         working-directory: ./web/frontend/rl-angular-spa
       - name: Lint (v${{ matrix.node-version }})
         working-directory: ./web/frontend/rl-angular-spa
@@ -146,7 +146,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
           cache-dependency-path: '**/yarn.lock'
-      - run: yarn install
+      - run: yarn install --frozen-lockfile
         working-directory: ./web/frontend/rl-angular-spa
       - name: Build Staging (v${{ matrix.node-version }})
         working-directory: ./web/frontend/rl-angular-spa
@@ -170,7 +170,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
           cache-dependency-path: '**/yarn.lock'
-      - run: yarn install
+      - run: yarn install --frozen-lockfile
         working-directory: ./web/frontend/rl-angular-spa
       - name: Test (v${{ matrix.node-version }})
         working-directory: ./web/frontend/rl-angular-spa
@@ -193,7 +193,7 @@ jobs:
           cache-dependency-path: '**/yarn.lock'
       - name: Install Dependencies
         working-directory: ./web/frontend/rl-angular-spa
-        run: yarn install
+        run: yarn install --frozen-lockfile
       - name: Run Tests
         working-directory: ./web/frontend/rl-angular-spa
         run: yarn run test
