Fix Playwright report path in CI workflow
Previously, the Playwright report path was incorrect and causing failed uploads. This commit updates the path to point to the correct directory, ensuring proper report generation and retention.

--- a/.github/workflows/verify-node.yml
+++ b/.github/workflows/verify-node.yml
@@ -300,7 +300,7 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: playwright-report/
+          path: web/frontend/rl-angular-spa/playwright-report/
           retention-days: 30
     env:
       CI: true
