Update test workflow dependencies
Added `deploy-railway-production` to the `needs` section of the `playwright-test` job in the `deploy-prod.yml` file. This ensures the playwright tests wait for the Railway production deployment before running.

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -271,7 +271,7 @@ jobs:
           poll-interval: '10'
 
   playwright-test:
-    needs: [deploy-vercel-prod, await-vercel-deployment-prod]
+    needs: [deploy-railway-production, deploy-vercel-prod, await-vercel-deployment-prod]
     timeout-minutes: 60
     runs-on: ubuntu-22.04
     steps:
