--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -271,7 +271,7 @@ jobs:
           poll-interval: '10'
 
   playwright-test:
-    needs: [deploy-vercel-prod, await-vercel-deployment-prod]
+    needs: [ deploy-railway-production, deploy-vercel-prod, await-vercel-deployment-prod ]
     timeout-minutes: 60
     runs-on: ubuntu-22.04
     steps:
@@ -280,10 +280,13 @@ jobs:
         with:
           node-version: lts/*
       - name: Install dependencies
+        working-directory: ./web/frontend/rl-angular-spa
         run: npm install -g yarn && yarn
       - name: Install Playwright Browsers
+        working-directory: ./web/frontend/rl-angular-spa
         run: yarn playwright install --with-deps
       - name: Run Playwright tests
+        working-directory: ./web/frontend/rl-angular-spa
         run: yarn playwright test
       - uses: actions/upload-artifact@v4
         if: always()
