--- a/web/frontend/rl-angular-spa/angular.json
+++ b/web/frontend/rl-angular-spa/angular.json
@@ -27,6 +27,7 @@
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
+              "node_modules/shepherd.js/dist/css/shepherd.css",
               {
                 "input": "src/theme-dark.css",
                 "bundleName": "theme-dark",
