--- a/web/frontend/rl-angular-spa/package.json
+++ b/web/frontend/rl-angular-spa/package.json
@@ -32,6 +32,7 @@
     "@ngrx/signals": "^18.0.0",
     "@supabase/supabase-js": "^2.45.2",
     "@vercel/analytics": "^1.3.1",
+    "angular-shepherd": "^18.0.2",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "flagsmith": "^4.0.3",
