Set package as private
Marking the package as private prevents accidental publication to the npm registry. This ensures that internal packages are not exposed publicly by mistake.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "roomyledger",
   "version": "0.0.1",
+  "private": true,
   "scripts": {
     "build": "turbo build",
     "build:prod": "turbo build:prod",
