Add build:nest-mono script to package.json
A new script "build:nest-mono" was added to streamline the build process for the "rl-nestjs-mono" module. This ensures that all necessary build steps for this module are run efficiently using "turbo".

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:stage": "turbo build:stage",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "build:nest-mono": "turbo run build --filter=rl-nestjs-mono"
   },
   "devDependencies": {
     "prettier": "^3.2.5",
