Add IDE and framework cache directories to .gitignore
Excluded .idea/, .angular, and specific paths for Angular caches to prevent unnecessary files from being tracked in the repository. This ensures a cleaner repository and reduces potential conflicts caused by IDE and framework-specific artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ node_modules
 .pnp
 .pnp.js
 
+.idea/
+
+web/frontend/rl-angular-spa/.angular
+mobile/roomyledger/.angular
+
 # Local env files
 .env
 .env.local
