Update .gitignore to include additional IDE and env files
Enhanced the .gitignore file to exclude specific IntelliJ IDEA project files and environment configuration files from version control. This helps in keeping the repository clean from local development settings and sensitive information.

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,12 @@ node_modules
 .pnp.js
 
 .idea/
+.idea/*.iml
+.idea/roomyledger.iml
 
 web/frontend/rl-angular-spa/.angular
 mobile/roomyledger/.angular
+web/backend/rl-nestjs-mono/.env*
 
 # Local env files
 .env
