Add Dockerfile, .dockerignore, and EventsGateway implementation
Introduced Dockerfile and .dockerignore for rl-nestjs-mono backend applications to manage Docker builds and ignore unnecessary files. Added WebSocket events gateway and unit tests in the notifications module. Included initial setup for Playwright test results and VSCode extension recommendations for the mobile application.

--- a/apps/frontend/rl-angular-spa/package.json
+++ b/apps/frontend/rl-angular-spa/package.json
@@ -8,6 +8,7 @@
     "dev": "ng serve",
     "ng": "ng",
     "start": "ng serve",
+    "start:prod": "exit 1",
     "build": "yarn run build:prod",
     "build:prod": "ng build --configuration production",
     "build:stage": "ng build --configuration stage",
