Update .gitignore to include all .env* files
Previously, only the .env file was ignored, which could lead to untracked environment files being committed. This change ensures all environment files (e.g., .env.local, .env.development) are ignored, enhancing security and consistency.

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ mobile/roomyledger/.angular
 web/backend/rl-nestjs-mono/.env*
 
 # Local env files
-.env
+.env*
 .env.local
 .env.development.local
 .env.test.local
