--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,21 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": [".next/**", "!.next/cache/**"],
+      "env": [
+        "NODE_ENV",
+        "DATABASE_URL",
+        "EMAIL_PASSWORD",
+        "EMAIL_USER",
+        "FRONT_END_URL",
+        "JWT_EXPIRES_IN",
+        "JWT_SECRET",
+        "STRIPE_API_KEY",
+        "STRIPE_WEBHOOK_SECRET",
+        "SUPABASE_URL",
+        "SUPABASE_KEY",
+        "SUPABASE_JWT_SECRET"
+      ]
     },
     "lint": {
       "dependsOn": ["^lint"]
@@ -13,6 +27,23 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "start:prod": {
+      "dependsOn": ["build"],
+      "env": [
+        "NODE_ENV",
+        "DATABASE_URL",
+        "EMAIL_PASSWORD",
+        "EMAIL_USER",
+        "FRONT_END_URL",
+        "JWT_EXPIRES_IN",
+        "JWT_SECRET",
+        "STRIPE_API_KEY",
+        "STRIPE_WEBHOOK_SECRET",
+        "SUPABASE_URL",
+        "SUPABASE_KEY",
+        "SUPABASE_JWT_SECRET"
+      ]
     }
   }
 }
