--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "test": "turbo test",
     "build:nest-mono": "turbo run build --filter=rl-nestjs-mono",
     "start:prod:nest-mono": "turbo run start:prod --filter=rl-nestjs-mono",
     "prepare": "husky"
