--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -9,12 +9,12 @@ permissions:
   pull-requests: read
 
 jobs:
-  lint-backend:
+  turbo-lint-build-test:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
         node-version: [ 20.x ]
-    name: Lint Backend (v${{ matrix.node-version }})
+    name: Test (v${{ matrix.node-version }})
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -25,52 +25,10 @@ jobs:
           cache: yarn
           cache-dependency-path: '**/yarn.lock'
       - run: yarn install --frozen-lockfile
-        working-directory: ./web/backend/rl-nestjs-mono
-      - name: Lint (v${{ matrix.node-version }})
-        working-directory: ./web/backend/rl-nestjs-mono
-        run: yarn run lint
-
-  build-backend:
-    runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        node-version: [ 20.x ]
-    name: Build Backend (v${{ matrix.node-version }})
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: yarn
-          cache-dependency-path: '**/yarn.lock'
-      - run: yarn install --frozen-lockfile
-        working-directory: ./web/backend/rl-nestjs-mono
-      - name: Build (v${{ matrix.node-version }})
-        working-directory: ./web/backend/rl-nestjs-mono
-        run: yarn run build
-
-  test-backend:
-    runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        node-version: [ 20.x ]
-    name: Test Backend (v${{ matrix.node-version }})
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: yarn
-          cache-dependency-path: '**/yarn.lock'
-      - run: yarn install --frozen-lockfile
-        working-directory: ./web/backend/rl-nestjs-mono
       - name: Test (v${{ matrix.node-version }})
-        working-directory: ./web/backend/rl-nestjs-mono
         run: yarn run test
+      - name: Test:Cov (v${{ matrix.node-version }})
+        run: yarn run test:cov
 
   sonarcloud-analysis-backend:
     name: SonarCloud Backend (v${{ matrix.node-version }})
@@ -88,10 +46,8 @@ jobs:
           cache: yarn
           cache-dependency-path: '**/yarn.lock'
       - name: Install Dependencies
-        working-directory: ./web/backend/rl-nestjs-mono
         run: yarn install --frozen-lockfile
       - name: Run Tests
-        working-directory: ./web/backend/rl-nestjs-mono
         run: yarn run test:cov
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
@@ -110,72 +66,6 @@ jobs:
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
             -Dsonar.qualitygate.wait=true
 
-  lint-frontend:
-    runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        node-version: [ 20.x ]
-    name: Lint Frontend (v${{ matrix.node-version }})
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: yarn
-          cache-dependency-path: '**/yarn.lock'
-      - run: yarn install --frozen-lockfile
-        working-directory: ./web/frontend/rl-angular-spa
-      - name: Lint (v${{ matrix.node-version }})
-        working-directory: ./web/frontend/rl-angular-spa
-        run: yarn run lint
-
-  build-frontend:
-    runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        node-version: [ 20.x ]
-    name: Build Frontend (v${{ matrix.node-version }})
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: yarn
-          cache-dependency-path: '**/yarn.lock'
-      - run: yarn install --frozen-lockfile
-        working-directory: ./web/frontend/rl-angular-spa
-      - name: Build Staging (v${{ matrix.node-version }})
-        working-directory: ./web/frontend/rl-angular-spa
-        run: yarn run build:stage
-      - name: Build (v${{ matrix.node-version }})
-        working-directory: ./web/frontend/rl-angular-spa
-        run: yarn run build
-
-  test-frontend:
-    runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        node-version: [ 20.x ]
-    name: Test Frontend (v${{ matrix.node-version }})
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: yarn
-          cache-dependency-path: '**/yarn.lock'
-      - run: yarn install --frozen-lockfile
-        working-directory: ./web/frontend/rl-angular-spa
-      - name: Test (v${{ matrix.node-version }})
-        working-directory: ./web/frontend/rl-angular-spa
-        run: yarn run test
-
   sonarcloud-analysis-frontend:
     name: SonarCloud Frontend (v${{ matrix.node-version }})
     runs-on: ubuntu-22.04
@@ -192,10 +82,8 @@ jobs:
           cache: yarn
           cache-dependency-path: '**/yarn.lock'
       - name: Install Dependencies
-        working-directory: ./web/frontend/rl-angular-spa
         run: yarn install --frozen-lockfile
       - name: Run Tests
-        working-directory: ./web/frontend/rl-angular-spa
         run: yarn run test
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
@@ -203,7 +91,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          projectBaseDir: web/frontend/rl-angular-spa
+          projectBaseDir: apps/frontend/rl-angular-spa
           args: -Dsonar.projectKey=jonathan-lee-devel_roomyledger-rl-angular-spa
             -Dsonar.organization=jonathan-lee-devel
             -Dsonar.sources=src
@@ -215,7 +103,7 @@ jobs:
             -Dsonar.qualitygate.wait=true
 
   deploy-railway-production:
-    needs: [ lint-backend, lint-frontend, build-backend, build-frontend, test-backend, test-frontend, sonarcloud-analysis-backend, sonarcloud-analysis-frontend ]
+    needs: [turbo-lint-build-test, sonarcloud-analysis-backend, sonarcloud-analysis-frontend]
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
@@ -234,7 +122,7 @@ jobs:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_PRODUCTION_TOKEN }}
 
   deploy-vercel-prod:
-    needs: [ lint-backend, lint-frontend, build-backend, build-frontend, test-backend, test-frontend, sonarcloud-analysis-backend, sonarcloud-analysis-frontend ]
+    needs: [turbo-lint-build-test, sonarcloud-analysis-backend, sonarcloud-analysis-frontend]
     runs-on: ubuntu-22.04
     env:
       VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
