Revert "Add Config Types to NestJS (#11)"
This reverts commit 1e81dd181015359b1b7f64a08e672ae7884a762c.

--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "test": "turbo test",
     "build:nest-mono": "turbo run build --filter=rl-nestjs-mono",
-    "start:prod:nest-mono": "turbo run start:prod --filter=rl-nestjs-mono",
-    "prepare": "husky"
+    "start:prod:nest-mono": "turbo run start:prod --filter=rl-nestjs-mono"
   },
   "devDependencies": {
-    "husky": "^9.1.6",
     "prettier": "^3.2.5",
     "turbo": "^2.1.2",
     "typescript": "^5.4.5"
