--- a/apps/mobile/roomyledger/package.json
+++ b/apps/mobile/roomyledger/package.json
@@ -8,7 +8,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --browsers ChromeHeadless --watch=false",
+    "test": "ng test",
     "lint": "ng lint"
   },
   "private": true,
