--- a/turbo.json
+++ b/turbo.json
@@ -5,21 +5,7 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"],
-      "env": [
-        "NODE_ENV",
-        "DATABASE_URL",
-        "EMAIL_PASSWORD",
-        "EMAIL_USER",
-        "FRONT_END_URL",
-        "JWT_EXPIRES_IN",
-        "JWT_SECRET",
-        "STRIPE_API_KEY",
-        "STRIPE_WEBHOOK_SECRET",
-        "SUPABASE_URL",
-        "SUPABASE_KEY",
-        "SUPABASE_JWT_SECRET"
-      ]
+      "outputs": [".next/**", "!.next/cache/**"]
     },
     "lint": {
       "dependsOn": ["^lint"]
@@ -27,23 +13,6 @@
     "dev": {
       "cache": false,
       "persistent": true
-    },
-    "start:prod": {
-      "dependsOn": ["build"],
-      "env": [
-        "NODE_ENV",
-        "DATABASE_URL",
-        "EMAIL_PASSWORD",
-        "EMAIL_USER",
-        "FRONT_END_URL",
-        "JWT_EXPIRES_IN",
-        "JWT_SECRET",
-        "STRIPE_API_KEY",
-        "STRIPE_WEBHOOK_SECRET",
-        "SUPABASE_URL",
-        "SUPABASE_KEY",
-        "SUPABASE_JWT_SECRET"
-      ]
     }
   }
 }
