--- a/web/frontend/rl-astro-docs/package.json
+++ b/web/frontend/rl-astro-docs/package.json
@@ -30,10 +30,11 @@
     "prettier-plugin-tailwindcss": "^0.2.2",
     "sass": "^1.49.9",
     "svgo": "^3.2.0",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "typescript": "^5.6.2"
   },
   "dependencies": {
     "@astrojs/vercel": "^7.8.0",
-    "sharp": "^0.33.2"
+    "sharp": "^0.32"
   }
 }
