--- a/web/frontend/rl-angular-spa/package.json
+++ b/web/frontend/rl-angular-spa/package.json
@@ -18,68 +18,70 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.5",
-    "@angular/cdk": "^18.0.5",
-    "@angular/common": "^18.0.5",
-    "@angular/compiler": "^18.0.5",
-    "@angular/core": "^18.0.5",
-    "@angular/forms": "^18.0.5",
-    "@angular/material": "^18.0.5",
-    "@angular/material-moment-adapter": "^18.0.5",
-    "@angular/platform-browser": "^18.0.5",
-    "@angular/platform-browser-dynamic": "^18.0.5",
-    "@angular/router": "^18.0.5",
-    "@ngrx/signals": "^18.0.0",
-    "@supabase/supabase-js": "^2.45.2",
+    "@angular/animations": "^18.2.5",
+    "@angular/cdk": "^18.2.5",
+    "@angular/common": "^18.2.5",
+    "@angular/compiler": "^18.2.5",
+    "@angular/core": "^18.2.5",
+    "@angular/forms": "^18.2.5",
+    "@angular/material": "^18.2.5",
+    "@angular/material-moment-adapter": "^18.2.5",
+    "@angular/platform-browser": "^18.2.5",
+    "@angular/platform-browser-dynamic": "^18.2.5",
+    "@angular/router": "^18.2.5",
+    "@ngrx/signals": "^18.0.2",
+    "@supabase/supabase-js": "^2.45.4",
     "@vercel/analytics": "^1.3.1",
     "angular-shepherd": "^18.0.2",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
-    "flagsmith": "^4.0.3",
+    "flagsmith": "^4.1.3",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "moment": "^2.30.1",
     "ngx-cookie-service": "^18.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primeng": "^17.18.2",
+    "primeng": "^17.18.10",
     "quill": "^2.0.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.3",
+    "uuid": "^10.0.0",
     "zone.js": "~0.14.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.6",
-    "@angular-eslint/builder": "^18.0.1",
-    "@angular-eslint/eslint-plugin": "^18.0.1",
-    "@angular-eslint/eslint-plugin-template": "^18.0.1",
-    "@angular-eslint/schematics": "^18.0.1",
-    "@angular-eslint/template-parser": "^18.0.1",
-    "@angular/cli": "^18.0.6",
-    "@angular/compiler-cli": "^18.0.5",
-    "@happy-dom/jest-environment": "^14.12.3",
-    "@ngrx/eslint-plugin": "^18.0.1",
-    "@playwright/test": "^1.46.1",
+    "@angular-devkit/build-angular": "^18.2.5",
+    "@angular-eslint/builder": "^18.3.1",
+    "@angular-eslint/eslint-plugin": "^18.3.1",
+    "@angular-eslint/eslint-plugin-template": "^18.3.1",
+    "@angular-eslint/schematics": "^18.3.1",
+    "@angular-eslint/template-parser": "^18.3.1",
+    "@angular/cli": "^18.2.5",
+    "@angular/compiler-cli": "^18.2.5",
+    "@happy-dom/jest-environment": "^15.7.4",
+    "@ngrx/eslint-plugin": "^18.0.2",
+    "@playwright/test": "^1.47.2",
     "@types/jasmine": "^5.1.4",
-    "@types/node": "^22.5.4",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
-    "cypress": "^13.12.0",
+    "@types/node": "^22.5.5",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
+    "cypress": "^13.14.2",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-html": "^8.1.1",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-html": "^8.1.2",
+    "eslint-plugin-import": "^2.30.0",
     "grunt": "^1.6.1",
     "grunt-bump": "^0.8.0",
     "grunt-contrib-clean": "^2.0.1",
     "grunt-prompt": "^1.3.3",
-    "jasmine-core": "~5.1.2",
-    "karma": "~6.4.3",
+    "jasmine-core": "~5.3.0",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "^2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-mocks": "^14.13.1",
-    "prettier": "3.3.2",
+    "prettier": "3.3.3",
     "typescript": "~5.4.5"
   },
   "resolutions": {
