Add prod start scripts for rl-micro-payments
Updated package.json to include a start script for rl-micro-payments in production mode. This ensures both rl-micro-api-gateway and rl-micro-payments can be started in production.

--- a/web/backend/rl-microservices/package.json
+++ b/web/backend/rl-microservices/package.json
@@ -15,7 +15,8 @@
     "start:dev:rl-micro-api-gateway": "nest start --watch rl-micro-api-gateway",
     "start:dev:rl-micro-payments": "nest start --watch rl-micro-payments",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/rl-micro-api-gateway/main",
+    "start:prod:rl-micro-api-gateway": "node dist/apps/rl-micro-api-gateway/main",
+    "start:prod:rl-micro-payments": "node dist/apps/rl-micro-payments/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
