Add rl-micro-comms microservice with gRPC support
Update build and start scripts to include rl-micro-comms. Change the rl-micro-comms main module to initialize as a gRPC microservice, specifying transport options and proto file path.

--- a/web/backend/rl-microservices/package.json
+++ b/web/backend/rl-microservices/package.json
@@ -6,17 +6,20 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "concurrently -c \"cyan.bold,blue.bold\" yarn:build:*",
+    "build": "concurrently -c \"cyan.bold,blue.bold,green.bold\" yarn:build:*",
     "build:rl-micro-api-gateway": "nest build rl-micro-api-gateway",
     "build:rl-micro-payments": "nest build rl-micro-payments",
+    "build:rl-micro-comms": "nest build rl-micro-comms",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "concurrently -c \"cyan.bold,blue.bold\" yarn:start:dev:*",
+    "start:dev": "concurrently -c \"cyan.bold,blue.bold,green.bold\" yarn:start:dev:*",
     "start:dev:rl-micro-api-gateway": "nest start --watch rl-micro-api-gateway",
     "start:dev:rl-micro-payments": "nest start --watch rl-micro-payments",
     "start:debug": "nest start --debug --watch",
+    "start:prod": "concurrently -c \"cyan.bold,blue.bold,green.bold\" yarn:start:prod:*",
     "start:prod:rl-micro-api-gateway": "node dist/apps/rl-micro-api-gateway/main",
     "start:prod:rl-micro-payments": "node dist/apps/rl-micro-payments/main",
+    "start:prod:rl-micro-comms": "node dist/apps/rl-micro-comms/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
