Add communication microservice to the rl-microservices project
This commit introduces the implementation of the communication microservice. It includes the necessary proto files, configuration changes in multiple files, and updates to the package.json to support development and integration.

--- a/web/backend/rl-microservices/package.json
+++ b/web/backend/rl-microservices/package.json
@@ -15,6 +15,7 @@
     "start:dev": "concurrently -c \"cyan.bold,blue.bold,green.bold\" yarn:start:dev:*",
     "start:dev:rl-micro-api-gateway": "nest start --watch rl-micro-api-gateway",
     "start:dev:rl-micro-payments": "nest start --watch rl-micro-payments",
+    "start:dev:rl-micro-comms": "nest start --watch rl-micro-comms",
     "start:debug": "nest start --debug --watch",
     "start:prod": "concurrently -c \"cyan.bold,blue.bold,green.bold\" yarn:start:prod:*",
     "start:prod:rl-micro-api-gateway": "node dist/apps/rl-micro-api-gateway/main",
