Remove e2e tests and integrate proto imports
Deleted end-to-end test files and configuration JSON files for rl-microservices. Replaced direct proto imports with centralized proto imports from the API gateway, and updated logger injection in the API gateway module. Minor refactoring for better logging.

--- a/web/backend/rl-microservices/tsconfig.json
+++ b/web/backend/rl-microservices/tsconfig.json
@@ -19,6 +19,9 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
+      "@rl-gw": [
+        "apps/rl-micro-api-gateway/src"
+      ],
       "@rl-validation/validation": [
         "libs/validation/src"
       ],
