--- a/web/backend/rl-microservices/package.json
+++ b/web/backend/rl-microservices/package.json
@@ -29,19 +29,43 @@
     "test:e2e": "jest --config ./apps/rl-micro-api-gateway/test/jest-e2e.json"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.0.2",
     "@grpc/grpc-js": "^1.11.3",
     "@grpc/proto-loader": "^0.7.13",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/event-emitter": "^2.0.4",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/microservices": "^10.4.4",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.2",
+    "@nestjs/throttler": "^6.2.1",
+    "@prisma/client": "^5.20.0",
+    "@supabase/supabase-js": "^2.45.4",
+    "@types/luxon": "^3.4.2",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/stripe": "^8.0.417",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "concurrently": "^9.0.1",
     "dotenv": "^16.4.5",
+    "helmet": "^7.1.0",
+    "luxon": "^3.5.0",
+    "nestjs-supabase-auth": "^1.0.9",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "prisma": "^5.20.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "ts-proto": "^2.2.0"
+    "stripe": "^16.12.0",
+    "ts-proto": "^2.2.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@automock/adapters.nestjs": "^2.1.0",
+    "@automock/jest": "^2.1.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -52,8 +76,10 @@
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
