--- a/web/backend/rl-microservices/Dockerfile-comms
+++ b/web/backend/rl-microservices/Dockerfile-comms
@@ -1,17 +1,20 @@
-FROM --platform=linux/amd64 node:20.17.0-alpine3.20 As development
+FROM --platform=linux/amd64 node:20.17.0-alpine3.20 AS development
 
 WORKDIR /usr/src/app
 
 COPY --chown=node:node package.json ./
 COPY --chown=node:node yarn.lock ./
+COPY --chown=node:node prisma ./
 
 RUN yarn install --frozen-lockfile
+
+RUN yarn prisma generate
 
 COPY --chown=node:node . .
 
 USER node
 
-FROM --platform=linux/amd64 node:20.17.0-alpine3.20 As build
+FROM --platform=linux/amd64 node:20.17.0-alpine3.20 AS build
 
 WORKDIR /usr/src/app
 
@@ -28,7 +31,7 @@ ENV NODE_ENV production
 
 USER node
 
-FROM --platform=linux/amd64 node:20.17.0-alpine3.20 As production
+FROM --platform=linux/amd64 node:20.17.0-alpine3.20 AS production
 
 COPY --chown=node:node --from=build /usr/src/app/package.json ./package.json
 COPY --chown=node:node --from=build /usr/src/app/node_modules ./node_modules
