Switch from gRPC to RabbitMQ for comms service
Replaced gRPC with RabbitMQ for the communications microservice to enhance scalability and reliability. This includes the removal of gRPC-related code and addition of RabbitMQ modules and configurations. Updated dependencies and refactored controllers accordingly.

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "husky": "^9.1.6"
   },
-  "dependencies": {}
+  "dependencies": {
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.4"
+  }
 }
