Switch to RabbitMQ for microservices communication
Replaced gRPC with RabbitMQ for microservices communication to enhance flexibility and scalability. Updated the respective environment configurations, main bootstrap files, and removed redundant imports and code segments. Adjusted `PropertiesService` to use direct `AuthUser` object instead of fetching user details from separate services.

--- a/web/backend/rl-microservices/package.json
+++ b/web/backend/rl-microservices/package.json
@@ -6,16 +6,18 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "concurrently -c \"cyan.bold,blue.bold,green.bold\" yarn:build:*",
+    "build": "concurrently -c \"cyan.bold,blue.bold,green.bold,yellow.bold\" yarn:build:*",
     "build:rl-micro-api-gateway": "nest build rl-micro-api-gateway",
     "build:rl-micro-payments": "nest build rl-micro-payments",
     "build:rl-micro-comms": "nest build rl-micro-comms",
+    "build:rl-micro-ledgers": "nest build rl-micro-ledgers",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "concurrently -c \"cyan.bold,blue.bold,green.bold\" yarn:start:dev:*",
+    "start:dev": "concurrently -c \"cyan.bold,blue.bold,green.bold,yellow.bold\" yarn:start:dev:*",
     "start:dev:rl-micro-api-gateway": "nest start --watch rl-micro-api-gateway",
     "start:dev:rl-micro-payments": "nest start --watch rl-micro-payments",
     "start:dev:rl-micro-comms": "nest start --watch rl-micro-comms",
+    "start:dev:rl-micro-ledgers": "nest start --watch rl-micro-ledgers",
     "start:debug": "nest start --debug --watch",
     "start:prod": "concurrently -c \"cyan.bold,blue.bold,green.bold\" yarn:start:prod:*",
     "start:prod:rl-micro-api-gateway": "node dist/apps/rl-micro-api-gateway/main",
