Switch to Yarn for production start script
Updated the Dockerfile to use Yarn instead of npm for initiating the production start script. Adjusted the package.json to correct the path for the start:prod script and removed an unnecessary test script.

--- a/web/backend/rl-nestjs-mono/Dockerfile
+++ b/web/backend/rl-nestjs-mono/Dockerfile
@@ -40,4 +40,4 @@ COPY --chown=node:node --from=build /usr/src/app/dist ./dist
 
 EXPOSE 3000
 
-CMD [ "sh", "-c", "npm run start:prod" ]
+CMD [ "sh", "-c", "yarn run start:prod" ]
