Add Node.js version matrix and caching to production deployment workflow
Enable Node.js version matrix with `22.x` and configure Yarn caching in the `deploy-prod.yml` workflow for improved consistency and performance during production builds.

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -260,6 +260,9 @@ jobs:
   deploy-vercel-prod:
     needs: [ lint-backend, lint-frontend, build-backend, build-frontend, test-backend, test-frontend, sonarcloud-analysis-backend, sonarcloud-analysis-frontend ]
     runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        node-version: [ 22.x ]
     env:
       VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
       VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
@@ -269,6 +272,11 @@ jobs:
         with:
           fetch-depth: '1'
           ref: main
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: yarn
+          cache-dependency-path: '**/yarn.lock'
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
       - name: Pull Vercel Environment Information
